小镇刷题家他又来了-更新八股文

--- a/八股文.md
+++ b/八股文.md
@@ -1,31 +1,39 @@
 # XGBoost 系列
 
-### [机器学习-XGBoost](https://zhuanlan.zhihu.com/p/105612830)
+#### [机器学习-XGBoost](https://zhuanlan.zhihu.com/p/105612830)
 
-### [深入理解XGBoost](https://zhuanlan.zhihu.com/p/83901304)
+#### [深入理解XGBoost](https://zhuanlan.zhihu.com/p/83901304)
 
-### [XGBoost 20题](https://www.cnblogs.com/cassielcode/p/12469053.html)
+#### [XGBoost 20题](https://www.cnblogs.com/cassielcode/p/12469053.html)
 
-### [【白话机器学习】算法理论+实战之Xgboost算法](https://zhuanlan.zhihu.com/p/139635028)
+#### [【白话机器学习】算法理论+实战之Xgboost算法](https://zhuanlan.zhihu.com/p/139635028)
 
-[【务实基础】梯度提升树GBDT](https://zhuanlan.zhihu.com/p/338122487)
+#### [【务实基础】梯度提升树GBDT](https://zhuanlan.zhihu.com/p/338122487)
 
-​	GBDT 缺点
+#### 	GBDT 缺点
 
 - 串行方式的模型训练，难并行，造成计算开销。
 - 不适合高维稀疏离散特征。这是决策树的痛点，比如动物类别采用one-hot编码后，会产生是否为狗，是否为猫一系列特征，而若这一系列特征中大量样本为狗，其它动物很少，那么树在划分属性时，很容易就划分为“是否为狗”，从而产生过拟合，它不像LR等线性模型f(w,x)的正则化权重是对样本惩罚（可以实现对狗样本给与更大的惩罚项），而树的惩罚项往往是树结构相关的，因此惩罚较小，使得在高维稀疏特征时，GBDT表现不好。
 
-### [【务实基础】XGBoost](https://zhuanlan.zhihu.com/p/340223260)
+#### [【务实基础】XGBoost](https://zhuanlan.zhihu.com/p/340223260)
 
 ## BatchNormalization
 
+#### [深度学习中的Normalization模型](https://zhuanlan.zhihu.com/p/43200897)
+
+#### [Batch Normalization导读](https://zhuanlan.zhihu.com/p/38176412)
+
+#### [模型优化之Layer Normalization](https://zhuanlan.zhihu.com/p/54530247)
+
+#### [NLP中 batch normalization与 layer normalization](https://zhuanlan.zhihu.com/p/74516930)
+
 # Learning to Rank
 
-### [Learning to Rank简介](https://www.cnblogs.com/bentuwuying/p/6681943.html)
+#### [Learning to Rank简介](https://www.cnblogs.com/bentuwuying/p/6681943.html)
 
-### [Learning to Rank算法介绍：GBRank](https://www.cnblogs.com/bentuwuying/p/6684585.html)
+#### [Learning to Rank算法介绍：GBRank](https://www.cnblogs.com/bentuwuying/p/6684585.html)
 
-### [Learning to Rank算法介绍：RankNet，LambdaRank，LambdaMart ](https://www.cnblogs.com/bentuwuying/p/6690836.html)
+#### [Learning to Rank算法介绍：RankNet，LambdaRank，LambdaMart ](https://www.cnblogs.com/bentuwuying/p/6690836.html)
 
 # FM系列
 
@@ -38,11 +46,9 @@
 #### [阿里粗排技术体系与最新进展分享](https://zhuanlan.zhihu.com/p/355828527)
 ##### 粗排两大技术路线 
  ###### 集合选择技术
-        集合选择技术是以集合为建模目标，选出满足后续链路需求的集合的方法，该技术路线在召回非常典型，这其实也非常符合粗排的定位。该方法优点是算力消耗一般比较少，缺点是依赖于对后链路的学习，可控性较弱。
+    集合选择技术是以集合为建模目标，选出满足后续链路需求的集合的方法，该技术路线在召回非常典型，这其实也非常符合粗排的定位。该方法优点是算力消耗一般比较少，缺点是依赖于对后链路的学习，可控性较弱。
   ###### 精准值预估技术
-      精准值预估技术直接对最终系统目标进行精确值预估，其实也就是pointwise的方式。
-  
-        
+    精准值预估技术直接对最终系统目标进行精确值预估，其实也就是pointwise的方式。
 
 #### [美团搜索粗排优化的探索与实践](https://zhuanlan.zhihu.com/p/553953132)
 
