小镇刷题家他又来了-更新八股文

--- a/八股文.md
+++ b/八股文.md
@@ -17,7 +17,7 @@
 
 #### [【务实基础】XGBoost](https://zhuanlan.zhihu.com/p/340223260)
 
-## BatchNormalization
+# BatchNormalization
 
 #### [深度学习中的Normalization模型](https://zhuanlan.zhihu.com/p/43200897)
 
@@ -34,6 +34,8 @@
 #### [Learning to Rank算法介绍：GBRank](https://www.cnblogs.com/bentuwuying/p/6684585.html)
 
 #### [Learning to Rank算法介绍：RankNet，LambdaRank，LambdaMart ](https://www.cnblogs.com/bentuwuying/p/6690836.html)
+
+#### [Learning To Rank 之 RankNet](https://blog.tsingjyujing.com/ml/recsys/ranknet)
 
 # FM系列
 
@@ -87,6 +89,8 @@
 #### [召回粗排的损失函数loss function](https://zhuanlan.zhihu.com/p/557416100)
  为什么粗排不用精排一样的pointwise损失函数，看过网上的解释，大致概括为1、粗排不需要像精排一样预估一个有具体含义的概率值，如ctr，只需要把正负例拉开即可。那么pointwise loss也能拉开啊，还真不是：2、pointwise loss有个不足，如第500名和1000名在pointwise 设定里都是负例，label都是0，模型无法区分谁更优秀，但是pairwise的设定可以，500>1000可以作为一对有信息量的pair进行训练。有些人要说，一个有一定正例且训练充分的pointwise模型总归知道500名比1000名强吧，而且pointwise的可能训练起来更稳定好收敛易上手，不一定比pairwise出来的模型差。想知道挖掘机哪家强，还是先好好学开挖掘机
 
+#### [随想： BPR Loss 与 Hinger Loss](https://blog.tsingjyujing.com/ml/recsys/bpr_and_hinger)
+
 ### 评价指标
 
 #### [粗排评价指标(1)](https://zhuanlan.zhihu.com/p/340250384)
@@ -112,8 +116,14 @@
 
 #### [mmoe家族的一些summary（待续）](https://zhuanlan.zhihu.com/p/538209695)
 
+#### [推荐系统中的多目标学习](https://zhuanlan.zhihu.com/p/183760759)
+
 # query改写
 
 # 对比学习
 
 # BERT相关
+
+# NLP
+
+#### [NLP三大Subword模型详解：BPE、WordPiece、ULM](https://zhuanlan.zhihu.com/p/198964217)
