小镇刷题家他又来了-更新八股文

--- a/八股文.md
+++ b/八股文.md
@@ -124,6 +124,38 @@
 
 # BERT相关
 
+#### [如何看待瘦身成功版BERT——ALBERT？](https://www.zhihu.com/question/347898375/answer/863537122)
+
+#### [BERT中，multi-head 768*64*12与直接使用768*768矩阵统一计算，有什么区别？](https://www.zhihu.com/question/446385446/answer/1982483918)
+
+#### [Mask矩阵在深度学习中有哪些应用场景？](https://www.zhihu.com/question/305508138/answer/1215025036)
+
+#### [为什么Transformer要用LayerNorm？](https://www.zhihu.com/question/487766088/answer/2129476576)
+
+#### [transformer问题整理（参考知乎大佬内容）](https://zhuanlan.zhihu.com/p/266695736)
+
+#### [面试准备 transformer及各种周边（待续）](https://zhuanlan.zhihu.com/p/396499248)
+
+#### [史上最细节的自然语言处理NLP/Transformer/BERT/Attention面试问题与答案](https://zhuanlan.zhihu.com/p/348373259)
+
+#### [史上最全Transformer面试题系列（一）：灵魂20问帮你彻底搞定Transformer-干货！](https://zhuanlan.zhihu.com/p/148656446)
+
+#### [超细节的BERT/Transformer知识点](https://zhuanlan.zhihu.com/p/132554155)
+
+#### [Transformer总结(2022版)](https://zhuanlan.zhihu.com/p/489187551)
+
+#### [BERT相关面试题（不定期更新）](https://zhuanlan.zhihu.com/p/151412524)
+
+#### [在 BERT 已经成为 NLP 基础知识的当下，你会在面试中问关于 BERT 的哪些问题？](https://www.zhihu.com/question/424003949/answer/2626211073)
+
+#### [原生Bert的训练和使用总结](https://zhuanlan.zhihu.com/p/163239652)
+
+#### [Colbert论文解析](https://zhuanlan.zhihu.com/p/376475610)
+
+#### [BERT生成式之UNILM解读](https://zhuanlan.zhihu.com/p/68327602)
+
+#### [BERT模型蒸馏完全指南（原理/技巧/代码）](https://zhuanlan.zhihu.com/p/273378905)
+
 # NLP
 
 #### [NLP三大Subword模型详解：BPE、WordPiece、ULM](https://zhuanlan.zhihu.com/p/198964217)
