小镇刷题家他又来了-更新八股文

--- a/八股文.md
+++ b/八股文.md
@@ -108,8 +108,6 @@
 
 #### [双塔模型存在的问题以及解决方案【综述】](https://zhuanlan.zhihu.com/p/567981161)
 
-
-
 # 多任务学习
 
 #### [代码精读之MMoE](https://zhuanlan.zhihu.com/p/551786848)
@@ -124,9 +122,12 @@
 
 # BERT相关
 
-#### [如何看待瘦身成功版BERT——ALBERT？](https://www.zhihu.com/question/347898375/answer/863537122)
-
 #### [BERT中，multi-head 768*64*12与直接使用768*768矩阵统一计算，有什么区别？](https://www.zhihu.com/question/446385446/answer/1982483918)
+
+```
+区别在于模型容量增加，带来模型表现力的提升。
+这里有一个容易引起误解的地方：“多头”不是“加头”，它实际上是“分头”
+```
 
 #### [Mask矩阵在深度学习中有哪些应用场景？](https://www.zhihu.com/question/305508138/answer/1215025036)
 
@@ -134,7 +135,9 @@
 
 #### [transformer问题整理（参考知乎大佬内容）](https://zhuanlan.zhihu.com/p/266695736)
 
-#### [面试准备 transformer及各种周边（待续）](https://zhuanlan.zhihu.com/p/396499248)
+#### [面试准备 transformer及各种周边（待续）](https://zhuanlan.zhihu.com/p/396499248) [重点看]
+
+#### [常用预训练语言模型（PTMs）总结](https://zhuanlan.zhihu.com/p/406512290)[重点看]
 
 #### [史上最细节的自然语言处理NLP/Transformer/BERT/Attention面试问题与答案](https://zhuanlan.zhihu.com/p/348373259)
 
@@ -155,6 +158,8 @@
 #### [BERT生成式之UNILM解读](https://zhuanlan.zhihu.com/p/68327602)
 
 #### [BERT模型蒸馏完全指南（原理/技巧/代码）](https://zhuanlan.zhihu.com/p/273378905)
+
+#### [如何看待瘦身成功版BERT——ALBERT？](https://www.zhihu.com/question/347898375/answer/863537122)
 
 # NLP
 
