小镇刷题家他又来了-更新八股文

--- a/八股文.md
+++ b/八股文.md
@@ -39,6 +39,12 @@
 
 # FM系列
 
+#### [FM算法解析](https://zhuanlan.zhihu.com/p/37963267)
+
+#### [推荐系统系列（一）：FM理论与实践](https://zhuanlan.zhihu.com/p/89639306)
+
+#### [推荐系统中CTR排序模型汇总(LR,FM,FFM,MLR,DCN,deepFM,PNN,AFM等)](https://zhuanlan.zhihu.com/p/268294797)
+
 # 深度排序
 
 # 召回&粗排
