小镇刷题家他又来了-更新八股文

--- a/八股文.md
+++ b/八股文.md
@@ -41,6 +41,44 @@
 
 #### [FM算法解析](https://zhuanlan.zhihu.com/p/37963267)
 
+**目的：**
+
+旨在解决稀疏数据下的特征组合问题。
+
+**优势：**
+
+- 高度稀疏数据场景；
+
+- 具有线性的计算复杂度。
+
+**特征组合**
+
+多项式模型是包含特征组合的最直观的模型。在多项式模型中，特征$x_i$ 和$x_j$ 的组合采用 $x_ix_j$ 表示，即$x_i$ 和$x_j$ 都非零时，组合特征 $x_ix_j$ 才有意义。从对比的角度，本文只讨论二阶多项式模型。模型的表达式如下
+$$
+y(X)=\omega_{0}+\sum_{i=1}^{n} \omega_{i} x_{i}+\sum_{i=1}^{n-1} \sum_{j=i+1}^{n} \omega_{i j} x_{i} x_{j}
+$$
+FM的模型方程为:
+$$
+\hat{y}(X):=\omega_0+\sum_{i=1}^n\omega_ix_i+\sum_{i=1}^{n-1}\sum_{j=i+1}^n<v_i,v_j>x_ix_j
+
+\\ <v_i,v_j>:=\sum_{f=1}^k v_{i,f}\cdot v_{j,f}
+$$
+公式(2)推导如下
+$$
+ab+ac+bc=\frac{1}{2}\left[(a+b+c)^2-(a^2+b^2+c^2)\right]\quad
+\\ \sum_{i=1}^{n-1}\sum_{j=i+1}^{n}<v_i,v_j>x_ix_j
+\\ 	=\dfrac{1}{2}\sum_{i=1}^{n}\sum_{j=1}^{n}<v_i,v_j>x_ix_j-\dfrac{1}{2}\sum_{i=1}^{n}<v_i,v_i>x_ix_i\quad
+\\       =\dfrac{1}{2}\left(\sum_{i=1}^n\sum_{j=1}^n\sum_{f=1}^k v_{i,f}v_{j,f}x_ix_j-\sum_{i=1}^n\sum_{f=1}^k v_{i,f}v_{i,f}x_ix_i\right)
+\\ =\dfrac{1}{2}\sum_{j=1}^k\left[\left(\sum_{i=1}^n v_{i,f}x_i\right)\cdot\left(\sum_{j=1}^n v_{i,f}x_j\right)-\sum_{i=1}^n v_{i,f}^2x_i^2\right]\quad
+\\  =\dfrac{1}{2}\sum_{f=1}^k\left[\left(\sum_{i=1}^n v_{i,f}x_i\right)^2-\sum_{i=1}^n v_{i,f}^2x_i^2\right]\quad
+$$
+解释：
+$v_{i,f}$ 是一个具体的值；
+第1个等号：对称矩阵 $W$ 对角线上半部分；
+第2个等号：把向量内积 $v_i,v_j$展开成累加和的形式；
+第3个等号：提出公共部分；
+第4个等号： $i$ 和 $j$ 相当于是一样的，表示成平方过程。
+
 #### [推荐系统系列（一）：FM理论与实践](https://zhuanlan.zhihu.com/p/89639306)
 
 #### [推荐系统中CTR排序模型汇总(LR,FM,FFM,MLR,DCN,deepFM,PNN,AFM等)](https://zhuanlan.zhihu.com/p/268294797)
