小镇刷题家他又来了-更新八股文

--- a/八股文.md
+++ b/八股文.md
@@ -183,6 +183,8 @@ $v_{i,f}$ 是一个具体的值；
 
 #### [常用预训练语言模型（PTMs）总结](https://zhuanlan.zhihu.com/p/406512290)[重点看]
 
+#### [tokenizers小结](https://zhuanlan.zhihu.com/p/360290118) [重点看]
+
 #### [史上最细节的自然语言处理NLP/Transformer/BERT/Attention面试问题与答案](https://zhuanlan.zhihu.com/p/348373259)
 
 #### [史上最全Transformer面试题系列（一）：灵魂20问帮你彻底搞定Transformer-干货！](https://zhuanlan.zhihu.com/p/148656446)
@@ -204,6 +206,8 @@ $v_{i,f}$ 是一个具体的值；
 #### [BERT模型蒸馏完全指南（原理/技巧/代码）](https://zhuanlan.zhihu.com/p/273378905)
 
 #### [如何看待瘦身成功版BERT——ALBERT？](https://www.zhihu.com/question/347898375/answer/863537122)
+
+#### [Transformer中使用的position embedding为什么是加法而不是concat](https://blog.csdn.net/weixin_38224810/article/details/124790477)
 
 # NLP
 
