小镇刷题家他又来了-更新八股文

--- a/八股文.md
+++ b/八股文.md
@@ -1,12 +1,12 @@
 # XGBoost 系列
 
-#### [机器学习-XGBoost](https://zhuanlan.zhihu.com/p/105612830)
+#### [机器学习-XGBoost](https://zhuanlan.zhihu.com/p/105612830) [看这个]
 
 #### [深入理解XGBoost](https://zhuanlan.zhihu.com/p/83901304)
 
 #### [XGBoost 20题](https://www.cnblogs.com/cassielcode/p/12469053.html)
 
-#### [【白话机器学习】算法理论+实战之Xgboost算法](https://zhuanlan.zhihu.com/p/139635028)
+#### [【白话机器学习】算法理论+实战之Xgboost算法](https://zhuanlan.zhihu.com/p/139635028) [看这个]
 
 #### [【务实基础】梯度提升树GBDT](https://zhuanlan.zhihu.com/p/338122487)
 
@@ -82,6 +82,10 @@ $v_{i,f}$ 是一个具体的值；
 #### [推荐系统系列（一）：FM理论与实践](https://zhuanlan.zhihu.com/p/89639306)
 
 #### [推荐系统中CTR排序模型汇总(LR,FM,FFM,MLR,DCN,deepFM,PNN,AFM等)](https://zhuanlan.zhihu.com/p/268294797)
+
+#### [Deepfm原理和源码 一篇就好](https://zhuanlan.zhihu.com/p/154591869)
+
+#### [DeepFM技术细节](https://zhuanlan.zhihu.com/p/148836639)
 
 # 深度排序
 
@@ -163,6 +167,28 @@ $v_{i,f}$ 是一个具体的值；
 # query改写
 
 # 对比学习
+
+#### [对比学习（Contrastive Learning）综述](https://zhuanlan.zhihu.com/p/346686467)
+
+#### [一文掌握《对比学习（Contrastive Learning）》要旨，详述MoCo和SimCLR算法](https://zhuanlan.zhihu.com/p/385160814)
+
+#### [利用Contrastive Learning对抗数据噪声：对比学习在微博场景的实践](https://zhuanlan.zhihu.com/p/370782081)
+
+#### [对比学习视角:重新审视推荐系统的召回粗排模型](https://zhuanlan.zhihu.com/p/424198603)
+
+#### [Noise Contrastive Estimation 前世今生——从 NCE 到 InfoNCE](https://zhuanlan.zhihu.com/p/334772391)
+
+#### [Sentence-BERT: 如何通过对比学习得到更好的句子向量表示](https://zhuanlan.zhihu.com/p/541575049)
+
+#### [SimCSE: Simple Contrastive Learning of Sentence Embeddings](https://zhuanlan.zhihu.com/p/368353121)
+
+#### [文本表达：SimCSE、ESimCSE对比与实践](https://zhuanlan.zhihu.com/p/469944640)
+
+#### [【SimCSE】没有标注数据也能训练文本匹配模型（附源码）](https://zhuanlan.zhihu.com/p/599230890)
+
+#### [超细节的对比学习和SimCSE知识点](https://zhuanlan.zhihu.com/p/378340148)
+
+#### [10.文本相似度/语义相似度/文本匹配之对比学习和SimCSE以及InfoNCE loss](https://zhuanlan.zhihu.com/p/569764236)
 
 # BERT相关
 
