--- a/八股文.md
+++ b/八股文.md
@@ -175,6 +175,7 @@ $v_{i,f}$ 是一个具体的值；
 #### [利用Contrastive Learning对抗数据噪声：对比学习在微博场景的实践](https://zhuanlan.zhihu.com/p/370782081)
 
 #### [对比学习视角:重新审视推荐系统的召回粗排模型](https://zhuanlan.zhihu.com/p/424198603)
+     从梯度角度 分析了温度超参数的作用
 
 #### [Noise Contrastive Estimation 前世今生——从 NCE 到 InfoNCE](https://zhuanlan.zhihu.com/p/334772391)
 
