--- a/八股文.md
+++ b/八股文.md
@@ -190,7 +190,7 @@ $v_{i,f}$ 是一个具体的值；
 #### [超细节的对比学习和SimCSE知识点](https://zhuanlan.zhihu.com/p/378340148)
 
 #### [10.文本相似度/语义相似度/文本匹配之对比学习和SimCSE以及InfoNCE loss](https://zhuanlan.zhihu.com/p/569764236)
-#### [CVPR2021自监督学习论文: 理解对比损失的性质以及温度系数的作用](https://zhuanlan.zhihu.com/p/357071960)
+#### [CVPR2021自监督学习论文: 理解对比损失的性质以及温度系数的作用](https://zhuanlan.zhihu.com/p/357071960)  [重点看]
 
 # BERT相关
 
