小镇刷题家他又来了-更新八股文

--- a/八股文.md
+++ b/八股文.md
@@ -89,6 +89,18 @@ $v_{i,f}$ 是一个具体的值；
 
 # 深度排序
 
+#### [连续特征的离散化：在什么情况下将连续的特征离散化之后可以获得更好的效果？](https://www.zhihu.com/question/31989952)
+
+- 离散特征的增加和减少都很容易，易于模型的快速迭代；
+- 稀疏向量内积乘法运算速度快，计算结果方便存储，容易扩展；
+- 离散化后的特征对异常数据有很强的鲁棒性：比如一个特征是年龄>30是1，否则0。如果特征没有离散化，一个异常数据“年龄300岁”会给模型造成很大的干扰；
+- 逻辑回归属于广义线性模型，表达能力受限；单变量离散化为N个后，每个变量有单独的权重，相当于为模型引入了非线性，能够提升模型表达能力，加大拟合；
+- 离散化后可以进行特征交叉，由M+N个变量变为M*N个变量，进一步引入非线性，提升表达能力；
+- 特征离散化后，模型会更稳定，比如如果对用户年龄离散化，20-30作为一个区间，不会因为一个用户年龄长了一岁就变成一个完全不同的人。当然处于区间相邻处的样本会刚好相反，所以怎么划分区间是门学问；
+- 特征离散化以后，起到了简化了逻辑回归模型的作用，降低了模型过拟合的风险。
+
+李沐曾经说过：模型是使用离散特征还是连续特征，其实是一个“海量离散特征+简单模型” 同 “少量连续特征+复杂模型”的权衡。既可以离散化用线性模型，也可以用连续特征加深度学习。就看是喜欢折腾特征还是折腾模型了。通常来说，前者容易，而且可以n个人一起并行做，有成功经验；后者目前看很赞，能走多远还须拭目以待。
+
 # 召回&粗排
 
 ### 框架
@@ -113,6 +125,8 @@ $v_{i,f}$ 是一个具体的值；
 #### [双塔召回模型的前世今生（上篇）](https://zhuanlan.zhihu.com/p/430503952)
 
 #### [双塔召回模型的前世今生（下篇）](https://zhuanlan.zhihu.com/p/441597009)
+
+
 
 ### 样本
 #### 目标: 拟合精排模型。即粗排尽可能圈出精排模型能排到前面的item。
@@ -155,6 +169,8 @@ $v_{i,f}$ 是一个具体的值；
 ### 其他
 
 #### [双塔模型存在的问题以及解决方案【综述】](https://zhuanlan.zhihu.com/p/567981161)
+
+#### [https://www.zhihu.com/question/505942505/answer/2274732251](https://www.zhihu.com/question/505942505/answer/2274732251)
 
 # 多任务学习
 
