小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -190,8 +190,45 @@ $v_{i,f}$ 是一个具体的值；
 
 #### [利用Contrastive Learning对抗数据噪声：对比学习在微博场景的实践](https://zhuanlan.zhihu.com/p/370782081)
 
-#### [对比学习视角:重新审视推荐系统的召回粗排模型](https://zhuanlan.zhihu.com/p/424198603)
-     从梯度角度 分析了温度超参数的作用
+#### [对比学习视角:重新审视推荐系统的召回粗排模型](https://zhuanlan.zhihu.com/p/424198603) [重点看看]
+    从梯度角度 分析了温度超参数的作用
+     
+    对比学习它最大的技术源泉来自于度量学习（Metric Learning）,你要看的话,会发现它的运作流程,基本就是度量学习的流程。什么意思呢?度量学习的优化目标就是说：比如我有正例和负例，它要将实体映射到一个空间里面去。它的目标是让正例在空间中近一些，负例在空间中远一些，这是度量学习的一个主体思想
+    
+    对比学习和度量学习的最大区别在于是否自监督构造训练数据: 具体的区别就是对比学习的正负例是根据一些规则自动构造的，而不是通过人工标注的数据（也就是有监督的方式）
+    
+    通过分子分母就很容易看出来它的优化目标。分子部分强调正例，希望它的距离越近越好，分母部分强调负例，希望和负例距离越远越好
+
+$$
+L_{q}=-\log \frac{\exp \left(q \cdot k_{+} / \tau\right)}{\left.\sum_{i=0}^{k} \exp \left(q \cdot k_{i} / \tau\right)\right)}
+$$
+
+
+
+```
+什么是模型坍塌？就是说不论你输入的是什么图片，经过映射函数之后，在投影空间里面，所有图像的编码都会坍塌到同一个点。坍塌到同一个点又是什么含义呢？就是说不论我的输入是什么，最终经过函数映射，被映射成同一个embedding，所有图像对应的Embedding都是一样的，这意味着你的映射函数没有编码任何有用的信息，这是一个很致命的问题。所以说怎么避免模型坍塌，是图像领域里面做对比学习非常关键的一个问题。这里讲的是什么是不好的学习系统：容易发生模型坍塌的模型是一个不好的对比学习系统。
+```
+
+```
+好的对比学习系统应该满足什么条件呢？（可以参考上图所示论文）它应兼顾两个要素： Alignment和Uniformity。
+
+Alignment代表我们希望对比学习把相似的正例在投影空间里面有相近的编码，一般我们做一个embedding映射系统，都是希望达成此目标.
+就是这个uniformity。Uniformity代表什么含义呢? Uniformity直观上来说就是：当所有实例映射到投影空间之后，我们希望它在投影空间内的分布是尽可能均匀的。这里有个点不好理解：为什么我们希望分布是均匀的呢？其实，追求分布均匀性不是Uniformity的目的，而是手段。追求分布的Uniformity实际想达成的是什么目标呢？它实际想达成的是:我们希望实例映射到投影空间后，在对应的Embedding包含的信息里，可以更多保留自己个性化的与众不同的信息。
+
+如果你把cosine公式写出来仔细看下的话，会发现cosine可以理解为对user embedding和item embedding各自先做了一个L2 Norm,然后两者再做内积。
+
+于是，问题来了：我们是不是应该对user embedding和item embedding做Norm?大家可能平常不太注意这个点。经验结论是这样的：应该做。意思就是要么你用cosine给它自动做Norm，要么用内积的话，原则上要在前一步做个L2 Norm，然后再去求内积，这两种做法基本等价。
+```
+
+
+
+```
+我个人的理解是这样的：不论做搜索、广告、推荐，用户行为数据的稀疏性是非常严重的，我认为这个问题也是目前制约系统优化很严重的问题。就是说，用户行为数据分布是极度不均匀的，它是个典型的长尾分布，就是真正被用户点过的行为数据item,很多都分布在极少数或者极少比例的item里面，大多数都是长尾的，没有用户数据，或者很少用户数据。这是个很严重的问题。
+
+它可以解决数据长尾分布的问题。对于长尾侧的数据,用现有的有监督方法，你会发现不论是对应的item也好，user也好，还是id特征也好，它打出的embedding不可靠，因为它的频次太低，很难通过很多用户行为数据推导出靠谱的embedding。这时候，对比学习就可以发挥它的作用了，这是推荐领域为什么要引入对比学习的初衷。
+```
+
+
 
 #### [Noise Contrastive Estimation 前世今生——从 NCE 到 InfoNCE](https://zhuanlan.zhihu.com/p/334772391)
 
@@ -208,9 +245,31 @@ $v_{i,f}$ 是一个具体的值；
 #### [10.文本相似度/语义相似度/文本匹配之对比学习和SimCSE以及InfoNCE loss](https://zhuanlan.zhihu.com/p/569764236)
 #### [CVPR2021自监督学习论文: 理解对比损失的性质以及温度系数的作用](https://zhuanlan.zhihu.com/p/357071960)  [重点看]
 
+$$
+\mathcal{L}\left(x_{i}\right)=-\log \left[\frac{\exp \left(s_{i, i} / \tau\right)}{\sum_{k \neq i} \exp \left(s_{i, k} / \tau\right)+\exp \left(s_{i, i} / \tau\right)}\right]
+$$
+
+$$
+\mathcal{L}_{simple}(x_i) =-s_{i,i}+\lambda\sum_{i\neq j}s_{i,j}
+$$
+
+$$
+对正样本的梯度： \frac{\partial\mathcal{L}(x_i)}{\partial s_{i,i}}=-\frac{1}{\tau}\sum_{k\neq i}P_{i,k}
+$$
+
+$$
+对负样本的梯度： \frac{\partial\mathcal{L}(x_i)}{\partial s_{i,i}}=-\frac{1}{\tau}\sum_{k\neq i}P_{i,k}
+$$
+
+$$
+其中 P_{i,j}=\frac{\exp(s_{i,j}/\tau)}{\sum_{k\neq i}\exp(s_{i,k}/\tau)+\exp(s_{i,i}/\tau)}
+$$
+
+
+
 # BERT相关
 
-#### [BERT中，multi-head 768*64*12与直接使用768*768矩阵统一计算，有什么区别？](https://www.zhihu.com/question/446385446/answer/1982483918)
+#### [BERT中，multi-head 768\*64\*12与直接使用768*768矩阵统一计算，有什么区别？](https://www.zhihu.com/question/446385446/answer/1982483918)
 
 ```
 区别在于模型容量增加，带来模型表现力的提升。
