小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -148,7 +148,10 @@ $v_{i,f}$ 是一个具体的值；
 
 ### 损失函数
 
+Triplet Loss
+
 #### [召回粗排的损失函数loss function](https://zhuanlan.zhihu.com/p/557416100)
+
  为什么粗排不用精排一样的pointwise损失函数，看过网上的解释，大致概括为1、粗排不需要像精排一样预估一个有具体含义的概率值，如ctr，只需要把正负例拉开即可。那么pointwise loss也能拉开啊，还真不是：2、pointwise loss有个不足，如第500名和1000名在pointwise 设定里都是负例，label都是0，模型无法区分谁更优秀，但是pairwise的设定可以，500>1000可以作为一对有信息量的pair进行训练。有些人要说，一个有一定正例且训练充分的pointwise模型总归知道500名比1000名强吧，而且pointwise的可能训练起来更稳定好收敛易上手，不一定比pairwise出来的模型差。想知道挖掘机哪家强，还是先好好学开挖掘机
 
 #### [随想： BPR Loss 与 Hinger Loss](https://blog.tsingjyujing.com/ml/recsys/bpr_and_hinger)
@@ -186,9 +189,17 @@ $v_{i,f}$ 是一个具体的值；
 
 #### [对比学习（Contrastive Learning）综述](https://zhuanlan.zhihu.com/p/346686467)
 
+#### [Contrastive Learning NLP Papers](https://zhuanlan.zhihu.com/p/363900943)
+
 #### [一文掌握《对比学习（Contrastive Learning）》要旨，详述MoCo和SimCLR算法](https://zhuanlan.zhihu.com/p/385160814)
 
 #### [利用Contrastive Learning对抗数据噪声：对比学习在微博场景的实践](https://zhuanlan.zhihu.com/p/370782081)
+
+```
+通过LAMB优化器，并结合Gradient Checkpointing优化技巧，放大Batch Size到1664
+```
+
+
 
 #### [对比学习视角:重新审视推荐系统的召回粗排模型](https://zhuanlan.zhihu.com/p/424198603) [重点看看]
     从梯度角度 分析了温度超参数的作用
