小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -187,6 +187,8 @@ Triplet Loss
 
 # 对比学习
 
+#### [Contrastive Representation Learning](https://lilianweng.github.io/posts/2021-05-31-contrastive/)
+
 #### [对比学习（Contrastive Learning）综述](https://zhuanlan.zhihu.com/p/346686467)
 
 #### [Contrastive Learning NLP Papers](https://zhuanlan.zhihu.com/p/363900943)
@@ -330,3 +332,9 @@ $$
 # 机器学习
 
 #### [关于损失函数和优化算法，看这一篇就够了](https://zhuanlan.zhihu.com/p/149715152)
+
+
+
+
+
+# [How to Train Really Large Models on Many GPUs?](https://lilianweng.github.io/posts/2021-09-25-train-large/) 非常重要
