小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -99,7 +99,7 @@ $v_{i,f}$ 是一个具体的值；
 - 特征离散化后，模型会更稳定，比如如果对用户年龄离散化，20-30作为一个区间，不会因为一个用户年龄长了一岁就变成一个完全不同的人。当然处于区间相邻处的样本会刚好相反，所以怎么划分区间是门学问；
 - 特征离散化以后，起到了简化了逻辑回归模型的作用，降低了模型过拟合的风险。
 
-李沐曾经说过：模型是使用离散特征还是连续特征，其实是一个“海量离散特征+简单模型” 同 “少量连续特征+复杂模型”的权衡。既可以离散化用线性模型，也可以用连续特征加深度学习。就看是喜欢折腾特征还是折腾模型了。通常来说，前者容易，而且可以n个人一起并行做，有成功经验；后者目前看很赞，能走多远还须拭目以待。
+**李沐曾经说过**：模型是使用离散特征还是连续特征，其实是一个“海量离散特征+简单模型” 同 “少量连续特征+复杂模型”的权衡。既可以离散化用线性模型，也可以用连续特征加深度学习。就看是喜欢折腾特征还是折腾模型了。通常来说，前者容易，而且可以n个人一起并行做，有成功经验；后者目前看很赞，能走多远还须拭目以待。
 
 # 召回&粗排
 
@@ -111,6 +111,12 @@ $v_{i,f}$ 是一个具体的值；
     集合选择技术是以集合为建模目标，选出满足后续链路需求的集合的方法，该技术路线在召回非常典型，这其实也非常符合粗排的定位。该方法优点是算力消耗一般比较少，缺点是依赖于对后链路的学习，可控性较弱。
   ###### 精准值预估技术
     精准值预估技术直接对最终系统目标进行精确值预估，其实也就是pointwise的方式。
+
+**top-k recall**，用于评估粗排和精排的对齐程度。其中top k候选集合和top m候选集合均为粗排的输入打分集合。top k集合是粗排选出的，而 top m集合是精排选出的
+$$
+\text { recall }=\frac{\mid\{\text { top } k \text { ad candidates }\} \cap \text { top } m \text { ad candidates }\} \mid}{\mid\{\text { top } m \text { ad candidates }\}\} \mid} .
+$$
+
 
 #### [美团搜索粗排优化的探索与实践](https://zhuanlan.zhihu.com/p/553953132)
 
