--- a/八股文.md
+++ b/八股文.md
@@ -120,6 +120,26 @@ $$
 
 #### [美团搜索粗排优化的探索与实践](https://zhuanlan.zhihu.com/p/553953132)
 
+##### 挑战点
+
+- **样本选择偏差：**级联排序系统下，粗排离最后的结果展示环节较远，导致粗排模型离线训练样本空间与待预测的样本空间存在较大的差异，存在严重的样本选择偏差。
+- **粗排精排联动：** 粗排处于召回和精排之间，粗排需要更多获取和利用后续链路的信息来提升效果。
+- **性能约束：** 线上粗排预测的候选集远远高于精排模型，然而实际整个搜索系统对性能有严格的要求，导致粗排需要重点关注预测性能。
+
+##### **精排结果列表蒸馏**
+
+```
+粗排作为精排的前置模块，它的目标是初步筛选出质量比较好的候选集合进入精排，从训练样本选取来看，除了常规的用户发生行为（点击、下单、支付）的 item 作为正样本，曝光未发生行为的 item 作为负样本外，还可以引入一些通过精排模型排序结果构造的正负样本，这样既能一定程度缓解粗排模型的样本选择偏置，也能将精排的排序能力迁移到粗排
+```
+
+- **策略1**：在用户反馈的正负样本基础上，随机选取少量精排排序靠后的未曝光样本作为粗排负样本的补充，如图 3 所示。该项改动离线 Recall@150（指标解释参看附录）+5PP，线上 CTR +0.1%。
+- **策略2**：直接在精排排序后的集合里面进行随机采样得到训练样本，精排排序的位置作为 label 构造 pair 对进行训练，如下图 4 所示。离线效果相比策略1 Recall@150 +2PP，线上 CTR +0.06%。
+- **策略3**：基于策略2的样本集选取，采用对精排排序位置进行分档构造 label ，然后根据分档 label 构造 pair 对进行训练。离线效果相比策略2 Recall@150 +3PP，线上 CTR +0.1%。
+
+#####  **精排预测分数蒸馏**
+
+粗排模型输出的分数与精排模型输出的分数分布尽量对齐
+
 #### [升级换代！Facebook全新电商搜索系统Que2Search](https://zhuanlan.zhihu.com/p/428495241)
 
 #### [KDD'21 | 揭秘Facebook升级版语义搜索技术](https://zhuanlan.zhihu.com/p/415516966)
