小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -138,9 +138,20 @@ $$
 
 #####  **精排预测分数蒸馏**
 
-粗排模型输出的分数与精排模型输出的分数分布尽量对齐
+- 粗排模型输出的分数与精排模型输出的分数分布尽量对齐
+
+#### [大规模搜索+预训练，百度是如何落地的？](https://mp.weixin.qq.com/s?__biz=MzIxMzkwNjM2NQ==&mid=2247504279&idx=1&sn=8d02ecbde4076932d4d5260379d32780&chksm=97ad3745a0dabe532b697b4407c4f947ce94a5a6a6cae0df534fd290a97fd2bdd2467bd81e86&scene=21#wechat_redirect)
+
+#### [Facebook的搜索是怎么做的？](https://mp.weixin.qq.com/s?__biz=MzIxMzkwNjM2NQ==&mid=2247488092&idx=1&sn=4ebb56be908d229ac5ac36b601991fa3&chksm=97aef48ea0d97d98726fbfb7c575057246be1b994eb501c416228e62d40d63669d0c81afbe9a&scene=21#wechat_redirect)
 
 #### [升级换代！Facebook全新电商搜索系统Que2Search](https://zhuanlan.zhihu.com/p/428495241)
+
+##### 针对『Facebook maketplace』这一特定场景的向量化检索系统，仍然存在以下几点挑战：
+
+- **商品描述存在噪声**：由于商品的属性描述（譬如标题、类别等）是由卖家上传的，会存在较多的拼写错误、属性丢失等；
+- **国际化支持**：Facebook Marketplace场景是多国家多语言的，需要模型具备跨语言检索能力；
+- **多模态处理**：需要在模型中同时考虑多种模态信息，图片、文本等；
+- **严格的延迟性限制**：众所周知线上搜索系统对延迟要求极高，会极大地影响用户体验。尤其是当使用Transformer-based模型时，延迟是一个巨大挑战；
 
 #### [KDD'21 | 揭秘Facebook升级版语义搜索技术](https://zhuanlan.zhihu.com/p/415516966)
 
@@ -210,6 +221,8 @@ Triplet Loss
 #### [推荐系统中的多目标学习](https://zhuanlan.zhihu.com/p/183760759)
 
 # query改写
+
+#### [BART原理简介与代码实战](https://zhuanlan.zhihu.com/p/121788986)
 
 # 对比学习
 
