--- a/八股文.md
+++ b/八股文.md
@@ -197,12 +197,12 @@ Triplet Loss
 
 #### [粗排评价指标(1)](https://zhuanlan.zhihu.com/p/340250384)
 
-#### [看完这篇AUC文章，搞定任何有关AUC的面试不成问题~](https://zhuanlan.zhihu.com/p/360765777)
+#### [看完这篇AUC文章，搞定任何有关AUC的面试不成问题~](https://zhuanlan.zhihu.com/p/360765777) [重点看]
 
 #### [机器学习的评价指标（一）：Accuracy、Precision、Recall、F1 Score](https://zhuanlan.zhihu.com/p/364253497)
 
 #### [机器学习的评价指标（二）：ROC-AUC和PR-AUC](https://zhuanlan.zhihu.com/p/364299008)
-#### [图解AUC和GAUC](https://zhuanlan.zhihu.com/p/84350940)
+#### [图解AUC和GAUC](https://zhuanlan.zhihu.com/p/84350940) 【auc 计算】
 
 #### [NDCG排序评估指标](https://zhuanlan.zhihu.com/p/448686098)
 
