小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -240,16 +240,26 @@ Triplet Loss
 通过LAMB优化器，并结合Gradient Checkpointing优化技巧，放大Batch Size到1664
 ```
 
-
+#### [对比学习火了NLP](https://mp.weixin.qq.com/s/EOlXjdd1gCruiF-B1JoIgg)
 
 #### [对比学习视角:重新审视推荐系统的召回粗排模型](https://zhuanlan.zhihu.com/p/424198603) [重点看看]
+
+```
+对比学习它最大的技术源泉来自于度量学习（Metric Learning）,你要看的话,会发现它的运作流程,基本就是度量学习的流程。什么意思呢?度量学习的优化目标就是说：比如我有正例和负例，它要将实体映射到一个空间里面去。它的目标是让正例在空间中近一些，负例在空间中远一些，这是度量学习的一个主体思想
+```
+
+
+
     从梯度角度 分析了温度超参数的作用
      
     对比学习它最大的技术源泉来自于度量学习（Metric Learning）,你要看的话,会发现它的运作流程,基本就是度量学习的流程。什么意思呢?度量学习的优化目标就是说：比如我有正例和负例，它要将实体映射到一个空间里面去。它的目标是让正例在空间中近一些，负例在空间中远一些，这是度量学习的一个主体思想
     
     对比学习和度量学习的最大区别在于是否自监督构造训练数据: 具体的区别就是对比学习的正负例是根据一些规则自动构造的，而不是通过人工标注的数据（也就是有监督的方式）
     
-    通过分子分母就很容易看出来它的优化目标。分子部分强调正例，希望它的距离越近越好，分母部分强调负例，希望和负例距离越远越好
+    
+
+通过分子分母就很容易看出来它的优化目标。**分子部分强调正例，希望它的距离越近越好，分母部分强调负例，希望和负例距离越远越好**
+
 
 $$
 L_{q}=-\log \frac{\exp \left(q \cdot k_{+} / \tau\right)}{\left.\sum_{i=0}^{k} \exp \left(q \cdot k_{i} / \tau\right)\right)}
