小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -255,8 +255,9 @@ Triplet Loss
     对比学习它最大的技术源泉来自于度量学习（Metric Learning）,你要看的话,会发现它的运作流程,基本就是度量学习的流程。什么意思呢?度量学习的优化目标就是说：比如我有正例和负例，它要将实体映射到一个空间里面去。它的目标是让正例在空间中近一些，负例在空间中远一些，这是度量学习的一个主体思想
     
     对比学习和度量学习的最大区别在于是否自监督构造训练数据: 具体的区别就是对比学习的正负例是根据一些规则自动构造的，而不是通过人工标注的数据（也就是有监督的方式）
-    
-    
+
+
+​    
 
 通过分子分母就很容易看出来它的优化目标。**分子部分强调正例，希望它的距离越近越好，分母部分强调负例，希望和负例距离越远越好**
 
@@ -377,6 +378,10 @@ $$
 # NLP
 
 #### [NLP三大Subword模型详解：BPE、WordPiece、ULM](https://zhuanlan.zhihu.com/p/198964217)
+
+[理解NLP最重要的编码方式 — Byte Pair Encoding (BPE)，这一篇就够了](https://zhuanlan.zhihu.com/p/424631681)
+
+#### [NLP领域中的token和tokenization到底指的是什么？](https://www.zhihu.com/question/64984731/answer/3010175256)
 
 # 机器学习
 
