小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -163,7 +163,13 @@ $$
 
 #### [双塔召回模型的前世今生（下篇）](https://zhuanlan.zhihu.com/p/441597009)
 
+#### [久别重逢话双塔](https://zhuanlan.zhihu.com/p/428396126)
 
+**如何采样以减少“样本选择偏差”、如何保证上下游目标一致性、如何在双塔中实现多任务间的信息转移**.
+
+**“双塔召回”与“双塔粗排”所需要的负样本，截然不同**
+
+双塔最大的缺点就在于，**user&item两侧信息交叉得太晚，等到最终能够通过dot或cosine交叉的时候，user & item embedding已经是高度浓缩的了，一些细粒度的信息已经在塔中被损耗掉，永远失去了与对侧信息交叉的机会**。所以，双塔改建最重要的一条主线就是：**如何保留更多的信息在tower的final embedding中，从而有机会和对侧塔得到的embedding交叉？**
 
 ### 样本
 #### 目标: 拟合精排模型。即粗排尽可能圈出精排模型能排到前面的item。
@@ -176,6 +182,12 @@ $$
 #### [召回和粗排负样本构造问题](https://zhuanlan.zhihu.com/p/352961688)
 
 #### [负样本为王：评Facebook的向量化召回算法](https://zhuanlan.zhihu.com/p/165064102)
+
+**Pairwise Hinge Loss**: $\operatorname{loss}=\max \left(0, \operatorname{margin}-\operatorname{dot}\left(u, d_{+}\right)+\operatorname{dot}\left(u, d_{-}\right)\right)$
+
+**BPR loss**:  $loss = \log(1+exp(det(u,d_-)-dot(u,d_+)))$
+
+**“双塔召回”与“双塔粗排”所需要的负样本，截然不同**
 
 #### [负样本的艺术，再读Facebook双塔向量召回算法](https://zhuanlan.zhihu.com/p/386913612)
 
