小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -27,6 +27,8 @@
 
 #### [NLP中 batch normalization与 layer normalization](https://zhuanlan.zhihu.com/p/74516930)
 
+#### [超细节的 BatchNorm/BN/LayerNorm/LN 知识点](https://zhuanlan.zhihu.com/p/521535855)( 重点看)
+
 # Learning to Rank
 
 #### [Learning to Rank简介](https://www.cnblogs.com/bentuwuying/p/6681943.html)
