--- a/八股文.md
+++ b/八股文.md
@@ -346,6 +346,8 @@ $$
 
 # BERT相关
 
+#### [This post is all you need（上卷）——层层剥开Transformer](https://zhuanlan.zhihu.com/p/420820453)
+
 #### [BERT中，multi-head 768\*64\*12与直接使用768*768矩阵统一计算，有什么区别？](https://www.zhihu.com/question/446385446/answer/1982483918)
 
 ```
@@ -393,7 +395,7 @@ $$
 
 #### [NLP三大Subword模型详解：BPE、WordPiece、ULM](https://zhuanlan.zhihu.com/p/198964217)
 
-[理解NLP最重要的编码方式 — Byte Pair Encoding (BPE)，这一篇就够了](https://zhuanlan.zhihu.com/p/424631681)
+#### [理解NLP最重要的编码方式 — Byte Pair Encoding (BPE)，这一篇就够了](https://zhuanlan.zhihu.com/p/424631681)
 
 #### [NLP领域中的token和tokenization到底指的是什么？](https://www.zhihu.com/question/64984731/answer/3010175256)
 
