小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -403,8 +403,9 @@ $$
 
 #### [关于损失函数和优化算法，看这一篇就够了](https://zhuanlan.zhihu.com/p/149715152)
 
+#### [PyTorch的十八个损失函数](https://zhuanlan.zhihu.com/p/61379965)
+
+#### [How to Train Really Large Models on Many GPUs?](https://lilianweng.github.io/posts/2021-09-25-train-large/) 非常重要
 
 
 
-
-# [How to Train Really Large Models on Many GPUs?](https://lilianweng.github.io/posts/2021-09-25-train-large/) 非常重要
