小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -81,13 +81,15 @@ $v_{i,f}$ 是一个具体的值；
 第3个等号：提出公共部分；
 第4个等号： $i$ 和 $j$ 相当于是一样的，表示成平方过程。
 
-#### [推荐系统系列（一）：FM理论与实践](https://zhuanlan.zhihu.com/p/89639306)
+
 
 #### [推荐系统中CTR排序模型汇总(LR,FM,FFM,MLR,DCN,deepFM,PNN,AFM等)](https://zhuanlan.zhihu.com/p/268294797)
 
 #### [Deepfm原理和源码 一篇就好](https://zhuanlan.zhihu.com/p/154591869)
 
-#### [DeepFM技术细节](https://zhuanlan.zhihu.com/p/148836639)
+#### [DeepFM技术细节](https://zhuanlan.zhihu.com/p/148836639) [重点看这个]
+
+#### [推荐系统召回四模型之：全能的FM模型](https://zhuanlan.zhihu.com/p/58160982)
 
 # 深度排序
 
