小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -199,6 +199,8 @@ $$
 
 #### [推荐系统（四）—— 负采样](https://zhuanlan.zhihu.com/p/456088223)
 
+#### [Efficient and Effective: 百篇论文概览负采样方法的前世今生](https://blog.csdn.net/abcdefg90876/article/details/122248083)
+
 ### 损失函数
 
 Triplet Loss
