小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -250,15 +250,19 @@ Triplet Loss
 
 #### [Contrastive Learning NLP Papers](https://zhuanlan.zhihu.com/p/363900943)
 
+#### [对比学习火了NLP](https://mp.weixin.qq.com/s/EOlXjdd1gCruiF-B1JoIgg)
+
+#### [对比学习（Contrastive Learning）:研究进展精要](https://zhuanlan.zhihu.com/p/367290573)
+
+如何构造相似实例，以及不相似实例，如何构造能够遵循上述指导原则的表示学习模型结构，以及如何防止模型坍塌(Model Collapse)，这几个点是其中的关键
+
 #### [利用Contrastive Learning对抗数据噪声：对比学习在微博场景的实践](https://zhuanlan.zhihu.com/p/370782081)
 
 ```
 通过LAMB优化器，并结合Gradient Checkpointing优化技巧，放大Batch Size到1664
 ```
 
-#### [对比学习火了NLP](https://mp.weixin.qq.com/s/EOlXjdd1gCruiF-B1JoIgg)
-
-#### [对比学习视角:重新审视推荐系统的召回粗排模型](https://zhuanlan.zhihu.com/p/424198603) [重点看看]
+#### [对比学习视角:重新审视推荐系统的召回粗排模型](https://zhuanlan.zhihu.com/p/424198603) [重点看]
 
 ```
 对比学习它最大的技术源泉来自于度量学习（Metric Learning）,你要看的话,会发现它的运作流程,基本就是度量学习的流程。什么意思呢?度量学习的优化目标就是说：比如我有正例和负例，它要将实体映射到一个空间里面去。它的目标是让正例在空间中近一些，负例在空间中远一些，这是度量学习的一个主体思想
@@ -398,6 +402,8 @@ $$
 #### [Transformer中使用的position embedding为什么是加法而不是concat](https://blog.csdn.net/weixin_38224810/article/details/124790477)
 
 # NLP
+
+#### [深入理解NLP Subword算法：BPE、WordPiece、ULM](https://zhuanlan.zhihu.com/p/86965595)
 
 #### [NLP三大Subword模型详解：BPE、WordPiece、ULM](https://zhuanlan.zhihu.com/p/198964217)
 
