小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -417,6 +417,8 @@ $$
 
 #### [PyTorch的十八个损失函数](https://zhuanlan.zhihu.com/p/61379965)
 
+#### [15分钟搞定Softmax Loss求导](https://zhuanlan.zhihu.com/p/105758059)
+
 #### [How to Train Really Large Models on Many GPUs?](https://lilianweng.github.io/posts/2021-09-25-train-large/) 非常重要
 
 
