小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -144,6 +144,10 @@ $$
 
 - 粗排模型输出的分数与精排模型输出的分数分布尽量对齐
 
+
+
+#### [深度粗排在天猫新品中的实践](https://zhuanlan.zhihu.com/p/627107816)
+
 #### [大规模搜索+预训练，百度是如何落地的？](https://mp.weixin.qq.com/s?__biz=MzIxMzkwNjM2NQ==&mid=2247504279&idx=1&sn=8d02ecbde4076932d4d5260379d32780&chksm=97ad3745a0dabe532b697b4407c4f947ce94a5a6a6cae0df534fd290a97fd2bdd2467bd81e86&scene=21#wechat_redirect)
 
 #### [Facebook的搜索是怎么做的？](https://mp.weixin.qq.com/s?__biz=MzIxMzkwNjM2NQ==&mid=2247488092&idx=1&sn=4ebb56be908d229ac5ac36b601991fa3&chksm=97aef48ea0d97d98726fbfb7c575057246be1b994eb501c416228e62d40d63669d0c81afbe9a&scene=21#wechat_redirect)
