小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -189,6 +189,12 @@ $$
 
 #### [召回和粗排负样本构造问题](https://zhuanlan.zhihu.com/p/352961688)
 
+```
+一定会存在这样一种情况：对于粗排模型打分比较靠前的样本（比如top5），精排模型却把这部分样本打分很低(比如top250～300)，那么，粗排打分很靠前的这几条样本是不会被曝光的，因此当我们复用精排模型的样本来训练粗排模型时，粗排模型是看不到这几条bad case的样本的，新粗排模型上线后，这几条样本很可能还被粗排模型排到靠前的位置。如果我们把这几条样本作为负样本来训练粗排模型，那么新的模型大概率就可以把这几条样本排到靠后的位置了。
+```
+
+
+
 #### [负样本为王：评Facebook的向量化召回算法](https://zhuanlan.zhihu.com/p/165064102)
 
 **Pairwise Hinge Loss**: $\operatorname{loss}=\max \left(0, \operatorname{margin}-\operatorname{dot}\left(u, d_{+}\right)+\operatorname{dot}\left(u, d_{-}\right)\right)$
