小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -345,15 +345,11 @@ $$
 $$
 
 $$
-\mathcal{L}_{simple}(x_i) =-s_{i,i}+\lambda\sum_{i\neq j}s_{i,j}
-$$
-
-$$
 对正样本的梯度： \frac{\partial\mathcal{L}(x_i)}{\partial s_{i,i}}=-\frac{1}{\tau}\sum_{k\neq i}P_{i,k}
 $$
 
 $$
-对负样本的梯度： \frac{\partial\mathcal{L}(x_i)}{\partial s_{i,i}}=-\frac{1}{\tau}\sum_{k\neq i}P_{i,k}
+对负样本的梯度： \frac{\partial\mathcal{L}(x_i)}{\partial s_{i,i}}=\frac{1}{\tau}P_{i,j}
 $$
 
 $$
