小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -426,6 +426,8 @@ $$
 
 #### [关于损失函数和优化算法，看这一篇就够了](https://zhuanlan.zhihu.com/p/149715152)
 
+<img src="/Users/panqiang/Library/Application Support/typora-user-images/image-20230806131107877.png" alt="image-20230806131107877" style="zoom: 25%;" />
+
 #### [PyTorch的十八个损失函数](https://zhuanlan.zhihu.com/p/61379965)
 
 #### [15分钟搞定Softmax Loss求导](https://zhuanlan.zhihu.com/p/105758059)
