小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -428,6 +428,12 @@ $$
 
 <img src="/Users/panqiang/Library/Application Support/typora-user-images/image-20230806131107877.png" alt="image-20230806131107877" style="zoom: 25%;" />
 
+<img src="/Users/panqiang/Library/Application Support/typora-user-images/image-20230806131429444.png" alt="image-20230806131429444" style="zoom:25%;" />
+
+<img src="/Users/panqiang/Library/Application Support/typora-user-images/image-20230806131805331.png" alt="image-20230806131805331" style="zoom:25%;" />
+
+<img src="/Users/panqiang/Library/Application Support/typora-user-images/image-20230806131915771.png" alt="image-20230806131915771" style="zoom:25%;" />
+
 #### [PyTorch的十八个损失函数](https://zhuanlan.zhihu.com/p/61379965)
 
 #### [15分钟搞定Softmax Loss求导](https://zhuanlan.zhihu.com/p/105758059)
