小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -426,6 +426,10 @@ $$
 
 #### [关于损失函数和优化算法，看这一篇就够了](https://zhuanlan.zhihu.com/p/149715152)
 
+
+
+#### [【推荐】李宏毅DL课程最新补充：深度学习的优化器 & 解释模型](https://www.bilibili.com/video/BV1Bz411B7kR/?spm_id_from=333.337.search-card.all.click&vd_source=f740ff72b448a270a8990e020d263b59)
+
 <img src="/Users/panqiang/Library/Application Support/typora-user-images/image-20230806131107877.png" alt="image-20230806131107877" style="zoom: 25%;" />
 
 <img src="/Users/panqiang/Library/Application Support/typora-user-images/image-20230806131429444.png" alt="image-20230806131429444" style="zoom:25%;" />
