小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -21,6 +21,17 @@
 
 #### [深度学习中的Normalization模型](https://zhuanlan.zhihu.com/p/43200897)
 
+因为经过第一步操作后，Normalization有可能降低神经网络的非线性表达能力，所以会以此方式来补偿Normalization操作后神经网络的表达能力。
+
+- 局限1：如果Batch Size太小，则BN效果明显下降。
+- 局限2：对于有些像素级图片生成任务来说，BN效果不佳；
+- 局限3：RNN等动态网络使用BN效果不佳且使用起来不方便
+- 局限4：训练时和推理时统计量不一致
+
+**Batch Normalization为何有效**
+
+​	BN可以解决神经网络训练过程中的ICS（Internal Covariate Shift）问题，所谓ICS问题，指的是由于深度网络由很多隐层构成，在训练过程中由于底层网络参数不断变化，导致上层隐层神经元激活值的分布逐渐发生很大的变化和偏移，而这非常不利于有效稳定地训练神经网络。
+
 #### [Batch Normalization导读](https://zhuanlan.zhihu.com/p/38176412)
 
 #### [模型优化之Layer Normalization](https://zhuanlan.zhihu.com/p/54530247)
