小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -32,13 +32,21 @@
 
 ​	BN可以解决神经网络训练过程中的ICS（Internal Covariate Shift）问题，所谓ICS问题，指的是由于深度网络由很多隐层构成，在训练过程中由于底层网络参数不断变化，导致上层隐层神经元激活值的分布逐渐发生很大的变化和偏移，而这非常不利于有效稳定地训练神经网络。
 
-#### [Batch Normalization导读](https://zhuanlan.zhihu.com/p/38176412)
-
-#### [模型优化之Layer Normalization](https://zhuanlan.zhihu.com/p/54530247)
-
 #### [NLP中 batch normalization与 layer normalization](https://zhuanlan.zhihu.com/p/74516930)
 
 #### [超细节的 BatchNorm/BN/LayerNorm/LN 知识点](https://zhuanlan.zhihu.com/p/521535855)( 重点看)
+
+平移和缩放的作用在哪里呢？主要还是为了：**保证模型的表达能力不因为标准化而下降**。
+
+在Norm中引入的两个新参数 γ和β，可以表示旧参数作为输入的同一族函数，但是新参数有不同的学习动态。在旧参数中， x的均值和方差取决于下层神经网络的复杂关联；但在新参数中， x的均值和方差仅由 γ和β 来确定，去除了与下层计算的密切耦合。新参数很容易通过梯度下降来学习，简化了神经网络的训练。
+
+如果直接只做标准化不做其他处理，神经网络是学不到任何东西的，因为标准化之后都是标准分布了，但是加入这两个参数后就不一样了。
+
+先考虑特殊情况，如果 γ和β 分别等于此batch的标准差和均值，那么y 不就还原到标准化前的x了吗，也即是缩放平移到了标准化前的分布，相当于Norm没有起作用。这样就保证了每一次数据经过Norm后还能保留学习来的特征，同时又能完成标准化这个操作，从而使当前神经元的分布摆脱了对下层神经元的依赖。
+
+#### [transformer 为什么使用 layer normalization，而不是其他的归一化方法？](https://www.zhihu.com/question/395811291/answer/1251829041)
+
+<img src="/Users/panqiang/Library/Application Support/typora-user-images/image-20230807215158638.png" alt="image-20230807215158638" style="zoom: 50%;" />
 
 # Learning to Rank
 
