小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -222,7 +222,7 @@ Symmetrical Scaled Cross Entropy Loss
 
 
 
-#### [负样本为王：评Facebook的向量化召回算法](https://zhuanlan.zhihu.com/p/165064102)
+#### [负样本为王：评Facebook的向量化召回算法](ç)
 
 **Pairwise Hinge Loss**: $\operatorname{loss}=\max \left(0, \operatorname{margin}-\operatorname{dot}\left(u, d_{+}\right)+\operatorname{dot}\left(u, d_{-}\right)\right)$
 
@@ -465,4 +465,6 @@ $$
 
 # 大模型
 
-### LoRA&Prefix-Tuning&Prompt-Tuning&P-Tuning v2
+#### [NLP民工的乐园: 几乎最全的中文NLP资源库](https://github.com/fighting41love/funNLP)
+
+#### LoRA&Prefix-Tuning&Prompt-Tuning&P-Tuning v2
