小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -461,10 +461,12 @@ $$
 
 #### [How to Train Really Large Models on Many GPUs?](https://lilianweng.github.io/posts/2021-09-25-train-large/) 非常重要
 
+# 强化学习
 
+### [蘑菇书EasyRL](https://datawhalechina.github.io/easy-rl/#/?id=蘑菇书easyrl)
 
 # 大模型
 
-#### [NLP民工的乐园: 几乎最全的中文NLP资源库](https://github.com/fighting41love/funNLP)
+### [NLP民工的乐园: 几乎最全的中文NLP资源库](https://github.com/fighting41love/funNLP)
 
-#### LoRA&Prefix-Tuning&Prompt-Tuning&P-Tuning v2
+### LoRA&Prefix-Tuning&Prompt-Tuning&P-Tuning v2
