--- a/八股文.md
+++ b/八股文.md
@@ -465,6 +465,8 @@ $$
 
 ### [蘑菇书EasyRL](https://datawhalechina.github.io/easy-rl/#/?id=蘑菇书easyrl)
 
+### [李宏毅老师讲的【强化学习】](https://www.bilibili.com/video/BV1XP4y1d7Bk/?spm_id_from=333.999.0.0&vd_source=f740ff72b448a270a8990e020d263b59)
+
 # 大模型
 
 ### [NLP民工的乐园: 几乎最全的中文NLP资源库](https://github.com/fighting41love/funNLP)
