小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -532,6 +532,35 @@ $$
 
 总之，Focal Loss 通过引入平衡和聚焦因子，使得模型更专注于难以分类的样本，从而在类别不平衡的情况下提高模型的性能。
 
+代码实现
+
+```python
+class FocalLoss(nn.Module):
+    def __init__(self, alpha=None, gamma=2, reduction='mean'):
+        super(FocalLoss, self).__init__()
+        self.alpha = alpha
+        self.gamma = gamma
+        self.reduction = reduction
+
+    def forward(self, inputs, targets):
+        ce_loss = F.cross_entropy(inputs, targets, reduction='none')
+        pt = torch.exp(-ce_loss)
+        focal_loss = (1 - pt) ** self.gamma * ce_loss
+
+        if self.alpha is not None:
+            alpha_t = self.alpha[targets]
+            focal_loss = alpha_t * focal_loss
+
+        if self.reduction == 'mean':
+            return focal_loss.mean()
+        elif self.reduction == 'sum':
+            return focal_loss.sum()
+        else:
+            return focal_loss
+```
+
+
+
 # 强化学习
 
 ### [蘑菇书EasyRL](https://datawhalechina.github.io/easy-rl/#/?id=蘑菇书easyrl)
