--- a/八股文.md
+++ b/八股文.md
@@ -431,6 +431,8 @@ $$
 
 #### [Transformer中使用的position embedding为什么是加法而不是concat](https://blog.csdn.net/weixin_38224810/article/details/124790477)
 
+#### [FlashAttention 的速度优化原理](https://www.zhihu.com/question/611236756/answer/3132304304)
+
 # NLP
 
 #### [深入理解NLP Subword算法：BPE、WordPiece、ULM](https://zhuanlan.zhihu.com/p/86965595)
