小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -573,4 +573,6 @@ class FocalLoss(nn.Module):
 
 ### [NLP民工的乐园: 几乎最全的中文NLP资源库](https://github.com/fighting41love/funNLP)
 
+### [Llama 2详解](https://zhuanlan.zhihu.com/p/649756898)
+
 ### LoRA&Prefix-Tuning&Prompt-Tuning&P-Tuning v2
