小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -575,4 +575,6 @@ class FocalLoss(nn.Module):
 
 ### [Llama 2详解](https://zhuanlan.zhihu.com/p/649756898)
 
+### **[Llama2-Chinese](https://github.com/FlagAlpha/Llama2-Chinese)**
+
 ### LoRA&Prefix-Tuning&Prompt-Tuning&P-Tuning v2
