小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -577,4 +577,12 @@ class FocalLoss(nn.Module):
 
 ### **[Llama2-Chinese](https://github.com/FlagAlpha/Llama2-Chinese)**
 
+#### [[LLM] 从实践到理论，Byte Pair Encoding(BPE) 深度调研](https://zhuanlan.zhihu.com/p/657938053)
+
 ### LoRA&Prefix-Tuning&Prompt-Tuning&P-Tuning v2
+
+
+
+# 动动手
+
+##### [从零实现BERT、GPT及Diffusion类算法](https://zhuanlan.zhihu.com/p/624068993)
