小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -386,7 +386,7 @@ $$
 
 # BERT相关
 
-#### [This post is all you need（上卷）——层层剥开Transformer](https://zhuanlan.zhihu.com/p/420820453)
+#### [This post is all you need（上卷）——层层剥开Transformer](https://zhuanlan.zhihu.com/p/420820453)[重点看看]
 
 #### [BERT中，multi-head 768\*64\*12与直接使用768*768矩阵统一计算，有什么区别？](https://www.zhihu.com/question/446385446/answer/1982483918)
 
