小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -277,19 +277,19 @@ Triplet Loss
 
 # query改写
 
-#### [BART原理简介与代码实战](https://zhuanlan.zhihu.com/p/121788986)
+### [BART原理简介与代码实战](https://zhuanlan.zhihu.com/p/121788986)
 
 # 对比学习
 
-#### [Contrastive Representation Learning](https://lilianweng.github.io/posts/2021-05-31-contrastive/)
+#### [Contrastive Representation Learning](https://lilianweng.github.io/posts/2021-05-31-contrastive/) 【英文综述】
 
-#### [对比学习（Contrastive Learning）综述](https://zhuanlan.zhihu.com/p/346686467)
+#### [对比学习（Contrastive Learning）综述](https://zhuanlan.zhihu.com/p/346686467)【数学高能预警】
 
 #### [Contrastive Learning NLP Papers](https://zhuanlan.zhihu.com/p/363900943)
 
 #### [对比学习火了NLP](https://mp.weixin.qq.com/s/EOlXjdd1gCruiF-B1JoIgg)
 
-#### [对比学习（Contrastive Learning）:研究进展精要](https://zhuanlan.zhihu.com/p/367290573)
+#### [对比学习（Contrastive Learning）:研究进展精要](https://zhuanlan.zhihu.com/p/367290573)【重点看】
 
 如何构造相似实例，以及不相似实例，如何构造能够遵循上述指导原则的表示学习模型结构，以及如何防止模型坍塌(Model Collapse)，这几个点是其中的关键
 
