--- a/八股文.md
+++ b/八股文.md
@@ -581,8 +581,15 @@ class FocalLoss(nn.Module):
 
 ### LoRA&Prefix-Tuning&Prompt-Tuning&P-Tuning v2
 
+[[PPT]浅析大语言模型从预训练到微调的技术原理](https://zhuanlan.zhihu.com/p/647843722)
 
+[【万字长文】LLaMA, ChatGLM, BLOOM的参数高效微调实践](https://zhuanlan.zhihu.com/p/635710004)
 
 # 动动手
 
 ##### [从零实现BERT、GPT及Diffusion类算法](https://zhuanlan.zhihu.com/p/624068993)
+
+
+
+#### [**Overview: The Implemented Transformer**](https://medium.com/@hunter-j-phillips/overview-the-implemented-transformer-eafd87fe9589)
+
