--- a/八股文.md
+++ b/八股文.md
@@ -573,7 +573,7 @@ class FocalLoss(nn.Module):
 
 ### [NLP民工的乐园: 几乎最全的中文NLP资源库](https://github.com/fighting41love/funNLP)
 
-### [Llama 2详解](https://zhuanlan.zhihu.com/p/649756898)
+### [Llama 2详解](https://zhuanlan.zhihu.com/p/649756898)[重点]
 
 ### **[Llama2-Chinese](https://github.com/FlagAlpha/Llama2-Chinese)**
 
