小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -293,6 +293,20 @@ Triplet Loss
 
 如何构造相似实例，以及不相似实例，如何构造能够遵循上述指导原则的表示学习模型结构，以及如何防止模型坍塌(Model Collapse)，这几个点是其中的关键
 
+```
+Alignment和Uniformity（参考上图）。所谓“Alignment”，指的是相似的例子，也就是正例，映射到单位超球面后，应该有接近的特征，也即是说，在超球面上距离比较近；所谓“Uniformity”，指的是系统应该倾向在特征里保留尽可能多的信息，这等价于使得映射到单位超球面的特征，尽可能均匀地分布在球面上，分布得越均匀，意味着保留的信息越充分。乍一看不好理解“分布均匀和保留信息”两者之间的关联，其实道理很简单：分布均匀意味着两两有差异，也意味着各自保有独有信息，这代表信息保留充分。
+```
+
+
+
+总体而言，温度参数 τ 起到如下作用：温度参数会将模型更新的重点，聚焦到有难度的负例，并对它们做相应的惩罚，难度越大，也即是与 $x_i$距离越近，则分配到的惩罚越多。所谓惩罚，就是在模型优化过程中，将这些负例从 $x_i$ 身边推开，是一种斥力。也就是说，距离 $x_i$ 越近的负例，温度超参会赋予更多的排斥力，将它从 $x_i$ 推远。而如果温度超参数 τ 设置得越小，则InfoNCE分配惩罚项的范围越窄，更聚焦在距离$x_i$ 比较近的较小范围内的负例里.温度超参越小，则更倾向把超球面上的局部密集结构推开打散，使得超球面上的数据整体分布更均匀
+
+
+
+在基于负例的对比学习中，负例数量越多，对比学习模型效果越好
+
+
+
 #### [利用Contrastive Learning对抗数据噪声：对比学习在微博场景的实践](https://zhuanlan.zhihu.com/p/370782081)
 
 ```
@@ -574,6 +588,8 @@ class FocalLoss(nn.Module):
 ### [NLP民工的乐园: 几乎最全的中文NLP资源库](https://github.com/fighting41love/funNLP)
 
 ### [Llama 2详解](https://zhuanlan.zhihu.com/p/649756898)[重点]
+
+[大模型基础组件之分词器-万字长文全面](https://zhuanlan.zhihu.com/p/626080766)
 
 ### **[Llama2-Chinese](https://github.com/FlagAlpha/Llama2-Chinese)**
 
