小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -129,13 +129,17 @@ $v_{i,f}$ 是一个具体的值；
 ### 框架
 
 #### [阿里粗排技术体系与最新进展分享](https://zhuanlan.zhihu.com/p/355828527)
-##### 粗排两大技术路线 
- ###### 集合选择技术
-    集合选择技术是以集合为建模目标，选出满足后续链路需求的集合的方法，该技术路线在召回非常典型，这其实也非常符合粗排的定位。该方法优点是算力消耗一般比较少，缺点是依赖于对后链路的学习，可控性较弱。
-  ###### 精准值预估技术
-    精准值预估技术直接对最终系统目标进行精确值预估，其实也就是pointwise的方式。
+- 粗排两大技术路线 
 
-**top-k recall**，用于评估粗排和精排的对齐程度。其中top k候选集合和top m候选集合均为粗排的输入打分集合。top k集合是粗排选出的，而 top m集合是精排选出的
+  - 集合选择技术
+    - 集合选择技术是以集合为建模目标，选出满足后续链路需求的集合的方法，该技术路线在召回非常典型，这其实也非常符合粗排的定位。该方法优点是算力消耗一般比较少，缺点是依赖于对后链路的学习，可控性较弱。
+
+  - 精准值预估技术
+    - 精准值预估技术直接对最终系统目标进行精确值预估，其实也就是pointwise的方式。
+
+- 评价指标
+  - **top-k recall**，用于评估粗排和精排的对齐程度。其中top k候选集合和top m候选集合均为粗排的输入打分集合。**top k集合是粗排选出的，而 top m集合是精排选出的**
+
 $$
 \text { recall }=\frac{\mid\{\text { top } k \text { ad candidates }\} \cap \text { top } m \text { ad candidates }\} \mid}{\mid\{\text { top } m \text { ad candidates }\}\} \mid} .
 $$
