--- a/八股文.md
+++ b/八股文.md
@@ -613,3 +613,7 @@ class FocalLoss(nn.Module):
 
 #### [**Overview: The Implemented Transformer**](https://medium.com/@hunter-j-phillips/overview-the-implemented-transformer-eafd87fe9589)
 
+
+
+#### [Attention Masks — Explanation](https://medium.com/@prudhviraju.srivatsavaya/attention-masks-explanation-b4ee2e8f8d23)
+
