--- a/八股文.md
+++ b/八股文.md
@@ -226,7 +226,7 @@ Symmetrical Scaled Cross Entropy Loss
 
 
 
-#### [负样本为王：评Facebook的向量化召回算法](ç)
+#### [负样本为王：评Facebook的向量化召回算法](https://zhuanlan.zhihu.com/p/165064102)
 
 **Pairwise Hinge Loss**: $\operatorname{loss}=\max \left(0, \operatorname{margin}-\operatorname{dot}\left(u, d_{+}\right)+\operatorname{dot}\left(u, d_{-}\right)\right)$
 
@@ -615,5 +615,5 @@ class FocalLoss(nn.Module):
 
 
 
-#### [Attention Masks — Explanation](https://medium.com/@prudhviraju.srivatsavaya/attention-masks-explanation-b4ee2e8f8d23)
+[Attention Masks — Explanation](https://medium.com/@prudhviraju.srivatsavaya/attention-masks-explanation-b4ee2e8f8d23)
 
