--- a/八股文.md
+++ b/八股文.md
@@ -230,6 +230,8 @@ Symmetrical Scaled Cross Entropy Loss
 
 **Pairwise Hinge Loss**: $\operatorname{loss}=\max \left(0, \operatorname{margin}-\operatorname{dot}\left(u, d_{+}\right)+\operatorname{dot}\left(u, d_{-}\right)\right)$
 
+<img src="https://pic2.zhimg.com/v2-53e7cdf5c5aeca8b3e6906e6d7a5d425_b.jpg" alt="img" style="zoom: 33%;" />
+
 **BPR loss**:  $loss = \log(1+exp(det(u,d_-)-dot(u,d_+)))$
 
 **“双塔召回”与“双塔粗排”所需要的负样本，截然不同**
